# jrpc-oo

./: .gitignore  AI_INSTRUCTIONS.md  ExportLit.js  ExposeClass.js  JRPCCommon.js  JRPCExport.js  JRPCNodeClient.js  JRPCServer.js  JRPCServerTest-dist.sh  JRPCServerTest.js  JRPCServerTest.sh  JRPCServerTestConcurrent.js  JRPCTools.js  JRPCToolsDuoTest.js  JRPCToolsTest.js  JRPCToolsTest.sh  LICENSE  README.md  index.html  jrpc-client.js  jrpc-oo.md  jrpc-scanner.js  package-lock.json  package.json  playwright.config.js  pyproject.toml  rollup.config.mjs  web-dev-server.config.mjs  web-dev-server.config.no_wss.mjs
demo/: double-call-client.js  double-call-test.html  dual-jrpc.html  dual-jrpc.js  findServer.html  index-dist.html  index-no-wss.html  index.html  local-jrpc-dist.js  local-jrpc.js
jrpc_oo/: CallbackChain.py  ExposeClass.py  JRPC2.py  JRPCClient.py  JRPCCommon.py  JRPCServer.py  NOTES  README.md  __init__.py  cert.py  pyproject.toml  setup.py  test_jrpc.py
jrpc_oo/tests/: Client1.py  Client2.py  JRPCClientTest.py  JRPCServerTest.py  JRPCServerTestConcurrent.py  JRPCServerTestDoubleCall.py  __init__.py  client1.py  client1_test.py  client2.py  client2_test.py  conftest.py  run_interop_tests.sh  server_test.py  test_integration.py  test_interop_js_server.py  test_interop_js_server_reverse.py  test_interop_py_server.py  test_unit.py
plans/: python-implementation-fixes.md
python/: README.md  __init__.py  client.py  debug_utils.py  expose_class.py  jrpc_client.py  jrpc_common.py  jrpc_server.py  pyproject.toml  requirements.txt  server.py  setup.py  test.js  test1_client.py  test1_server.py  test1_server_background.py  test2_client.py  test2_server.py  test_client.py  test_server.py
python/tests/: __init__.py  client1.py  client2.py  server_test.py
tests/: Client1.js  Client2.js  JRPCServerTestConcurrent.js  JRPCServerTestInterop.js  multiTest.sh
tests/playwright/: demo.spec.js
