[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jrpc-oo"
version = "0.1.0"
description = "Python implementation of JRPC-OO for WebSocket RPC communication"
readme = "README.md"
authors = [
    {name = "Flatmax", email = "example@example.com"}
]
license = {text = "BSD 3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "jsonrpclib-pelix",
    "websocket-client",
    "websocket-server",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["python"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
