[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jrpc-python"
version = "0.1.0"
description = "Python JRPC Implementation"
requires-python = ">=3.7"
dependencies = [
    "jsonrpclib-pelix>=0.4.3.2",
    "pytest>=8.3.3",
    "websocket-client>=1.7.0",
    "websocket-server>=0.4"
]

[tool.setuptools]
py-modules = ["jrpc_server", "jrpc_client", "jrpc_common", "expose_class", "debug_utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
