[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jrpc_oo"
version = "0.1.0"
description = "Python implementation of JRPC-OO for WebSocket RPC communication"
readme = "README.md"
authors = [
    {name = "Flatmax", email = "example@example.com"}
]
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "jsonrpclib-pelix",
    "websocket-client",
    "websocket-server",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
]

# Don't look for a 'python' directory - these are modules in the current directory
[tool.setuptools]
py-modules = ["ExposeClass", "JRPCClient", "JRPCCommon", "JRPCServer"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
